--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,34 @@
 </head>
 <body>
   <app-root></app-root>
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/6.2.4/firebase-app.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-firestore.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#reserved-urls -->
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDFY0u1BZWd5TBZpXPnnaHBGNHXKzw_HF0",
+    authDomain: "oil-manager.firebaseapp.com",
+    databaseURL: "https://oil-manager.firebaseio.com",
+    projectId: "oil-manager",
+    storageBucket: "oil-manager.appspot.com",
+    messagingSenderId: "485454067270",
+    appId: "1:485454067270:web:3f9d5de19240f51a"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
 
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
+  // Initialize Cloud Firestore through Firebase
+  firebase.initializeApp({
+    apiKey: 'AIzaSyDFY0u1BZWd5TBZpXPnnaHBGNHXKzw_HF0',
+    authDomain: 'oil-manager.firebaseapp.com',
+    projectId: 'oil-manager'
+  });
+
+  var db = firebase.firestore();
+</script>
 </body>
 </html>
